# ma_titan

./: .gitignore  Cargo.toml  README.md  messung.txt  stats.txt  update-branches.sh
Evaluierung/: Cargo.toml
Evaluierung/src/: main.rs
Implementierung/: .gitignore  Cargo.toml
Implementierung/benches/: static.rs
Implementierung/src/: InternalList.rs  dynamics.rs  internal.rs  lib.rs  statics.rs  tests.rs
Implementierung/src/data_structures/: binary.rs  dynamics.rs  mod.rs  statics.rs
Implementierung/src/help/: builder.rs  internal.rs  mod.rs  uint.rs
Implementierung/src/u40/: builder.rs  mod.rs  stat.rs
Implementierung/src/u48/: builder.rs  mod.rs  stat.rs
benches/: binary_new.rs  binary_pred.rs  btree_new.rs  btree_pred.rs  stree_immutable.rs  stree_new.rs  stree_pred.rs  stree_unmutable.rs  vebtree_new.rs  vebtree_pred.rs
eval-scripts/space/: run_eval.sh  run_stree.sh  run_u40.sh  space - Verknüpfung.lnk
eval-scripts/space/binary/default/bwt_runs/: 1.sh  (+1 more)
eval-scripts/space/u40/: eval_space_1.sh  eval_space_10.sh  eval_space_11.sh  eval_space_12.sh  eval_space_13.sh  eval_space_14.sh  eval_space_15.sh  eval_space_16.sh  eval_space_17.sh  eval_space_18.sh  eval_space_2.sh  eval_space_3.sh  eval_space_4.sh  eval_space_5.sh  eval_space_6.sh  eval_space_7.sh  eval_space_8.sh  eval_space_9.sh
eval-scripts/speed/: run_eval.sh  run_stree.sh  run_stree_build.sh  run_u40.sh  start.sh
eval-scripts/speed/pred/binary/: pred - Verknüpfung.lnk
eval-scripts/speed/u40/: eval_speed_1.sh  eval_speed_10.sh  eval_speed_11.sh  eval_speed_12.sh  eval_speed_13.sh  eval_speed_14.sh  eval_speed_15.sh  eval_speed_16.sh  eval_speed_17.sh  eval_speed_18.sh  eval_speed_2.sh  eval_speed_3.sh  eval_speed_4.sh  eval_speed_5.sh  eval_speed_6.sh  eval_speed_7.sh  eval_speed_8.sh  eval_speed_9.sh
eval_data_generator/: Cargo.toml
eval_data_generator/src/: main.rs
eval_speed/: Cargo.toml
eval_speed/benches/: my_benchmark.rs
playground/: Cargo.toml
playground/src/: main.rs
space_measure/: Cargo.toml
space_measure/src/: main.rs
src/: benches.rs  internal.rs  lib.rs
src/default/: build.rs  immutable.rs  mod.rs  mutable.rs  tests.rs
testdata/: 2^1.data  2^10.data  2^13.data  2^14.data  2^15.data  2^17.data  2^18.data  2^8.data  2^9.data
testdata/u40/: 2^0.data  2^1.data  2^10.data  2^11.data  2^12.data  2^13.data  2^14.data  2^15.data  2^16.data  2^17.data  2^18.data  2^2.data  2^3.data  2^4.data  2^5.data  2^6.data  2^7.data  2^8.data  2^9.data
titan_ma/: Cargo.toml  README.md
titan_ma/benches/: stree_unmutable.rs
titan_ma/src/: lib.rs
titan_ma/src/default/: build.rs  mod.rs  mutable.rs  unmutable.rs
titan_ma/testdata/u40/: 2^2.data
(+887 files in other folders)
