[package]
name = "ma_titan"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
fnv = "1.0.6"
boomphf = {git = "https://github.com/10XGenomics/rust-boomphf.git"}
uint = { git = "https://github.com/Tockra/uint.git" }
vebtrees = {git = "https://github.com/Tockra/rust-vebtrees.git"}
num = "0.2.0"