[package]
name = "ma_titan"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

[dependencies]
hashbrown = "0.6.1"
boomphf = {git = "https://github.com/Tockra/rust-boomphf.git"}
uint = { git = "https://github.com/Tockra/uint.git" }
stats_alloc = { git = "https://github.com/Tockra/stats_alloc.git" }
vebtrees = {git = "https://github.com/Tockra/rust-vebtrees.git"}
num = "0.2.0"