[package]
name = "predecessor_list"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
serde = "1.0.99"
rmp-serde = "0.13.7"
fnv = "1.0.6"
ux = "0.1.3"
boomphf = "0.5.2"
uint = { git = "https://github.com/Tockra/uint.git" }

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "static"
harness = false