[package]
name = "eval_speed"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
serde = "1.0.99"
rmp-serde = "0.13.7"
predecessor_list = {path ="../Implementierung"}
uint = { git = "https://github.com/Tockra/uint.git" }

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "my_benchmark"
harness = false